# candela-docs

./: .gitignore  README.md  astro.config.mjs  flake.nix  lefthook.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  preview.yml  sync-governance.yml
docs/: index.md
docs/api/: index.md
docs/architecture/: index.md
docs/desktop/: index.md  providers.md  traces.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guides/: adk-integration.md  opentelemetry.md
docs/local/: index.md
docs/server/: index.md
docs/sidecar/: configuration.md  deployment.md  index.md
docs/stylesheets/: extra.css
public/schemas/: config.v1.json
src/content/docs/: index.mdx
src/content/docs/api/: connectrpc.md  proxy-routes.md
src/content/docs/architecture/: deployment.md  operations.md  security.md  storage.md
src/content/docs/components/: candela-desktop.md  candela-local.mdx  candela-server.md  candela-sidecar.md  candela.mdx
src/content/docs/getting-started/: authentication.mdx  installation.mdx  overview.mdx  quickstart.mdx
src/content/docs/governance/: audit-compliance.mdx  budgets.mdx  ebpf-enforcement.mdx  model-access.mdx  multitenancy.md  multitenancy.mdx  overview.mdx
src/content/docs/guides/: adk-integration.mdx  budgets.mdx  enrichment-sdks.mdx  model-catalog.md  multitenancy.md  multitenancy.mdx  opentelemetry.md  pricing.md  prompt-caching.mdx  self-hosting.md  system-prompt-caching.mdx
src/content/docs/guides/ide/: antigravity.md  claude-code.md  cline.md  (+6 more)
src/styles/: custom.css
