[project]
name = "candela-docs"
version = "0.1.0"
description = "Documentation for the Candela observability platform"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.6",
    "mkdocs-mermaid2-plugin>=1.1",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-git-revision-date-localized-plugin>=1.3",
    "mike>=2.1",
    "yamllint>=1.35",
]
